--- a/entradaBlog.html
+++ b/entradaBlog.html
@@ -96,22 +96,32 @@
 
   <main>
     <div class="container text-center text-white">
-      <img src="./img/messiSlider.jpg" alt="deporte" class="imgStyle">
-      <h1 class="text-center my-3"> Titulo del articulo</h1>
+      <img src="./img/messiPost.jpeg" alt="banner messi" class="imgStyle">
+      <h1 class="text-center my-3">Messi sobre el mundial 2026</h1>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-9">
+        <div class="col-9 fs-5">
           <div class="text-white">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Unde repellat veritatis ratione nam", vitae quam tempora consequuntur non facilis laborum facere expedita numquam voluptatem aut molestias neque fuga dolorum eligendi.
-            Dignissimos, molestiae atque! Illo laboriosam  officiis ducimus adipisci? Aperiam quo, vel optio ut perferendis ipsam eius voluptatum
-             reiciendis rem quibusdam animi vitae earum commodi ex sint eveniet, impedit alias itaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum totam voluptas ea illum consequuntur quibusdam at aliquam tenetur inventore, officia officiis repellendus aut nisi blanditiis nesciunt. Voluptatibus quas rem architecto.
-            </p>
+            <p class="fw-bold ">El capitán de la Selección Argentina habló tras el triunfo ante Australia en un amistoso y se volvió a referir a la frase sobre su ausencia en la Copa del Mundo 2026. "Es difícil que se dé" aseguró.</p>
+            <br>
+            <p>En la mañana del jueves, la Selección Argentina derrotó 2-0 a Australia en un amistoso disputado en Beijing con un gol de Lionel Messi y otro de Germán Pezzella. El capitán de la Albiceleste habló con TyC Sports luego del triunfo, dio sus sensaciones y volvió a hablar de sus declaraciones sobre el Mundial de 2026.</p>
           </div>
         </div>
         <div class="col-3">
-          <img src="./img/messiPost.webp" alt="imagen" class="imgStyle2">
+          <img src="./img/messiPost.webp" alt="messi post" class="imgStyle2">
+        </div>
+        <div class="col-12 fs-5 mt-3">
+          <div class="text-white">
+            <p> <strong>"Siempre disfrutamos de estar acá, como lo venimos repitiendo hace tiempo. Hoy una vez más acá, fue complicado jugar, mucha humedad, mucho calor, estaba pesado. Más allá de todo, seguimos con la misma idea y creciendo",</strong> declaró la Pulga sobre el encuentro.</p>
+            <br>
+            <p> <strong>"Lo que dije del Mundial es algo normal. Por edad y por el tiempo es difícil que se dé. Disfruto el momento, el día a día, el estar acá, ahora vienen partidos de Eliminatorias, después la Copa América. Es ir muy lejos pensar en el Mundial. Hay que disfrutar de lo conseguido y de cada momento que nos toque vivir"</strong>, aseguró sobre su presencia en 2026.</p>
+            <br>
+            <p> <strong>"Busco disfrutar del día a día, que el último año me costó bastante, no estaba como me hubiese gustado. Y pensar en lo que se viene. Empieza un ciclo nuevo, se vienen partidos de Eliminatorias dentro de poquito, no nos podemos quedar en lo que conseguimos, hay que pensar en lo que viene y disfrutar cuando nos toca reencontrarnos"</strong>, completó.</p>
+          </div>
+          <div class="text-white mt-5">
+            <p>&copy; Todos los derechos TyC Sports 2023</p>
+          </div>
         </div>
         <div class="col-12 mt-4">
           <form action="">
@@ -131,16 +141,11 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
+              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Homero <br> <span>Ahora</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario"> Lorem ipsum dolor, sit amet cons
-                  ectetur adipisicing elit. Dolores id tempore 
-                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
-                  acilis harum libero aut
-                  em dolore qui delectus quisquam quae debitis.
-              </p>
+              <p class="comentario">Juga el mundial 2026 Leo!!</p>
             </div>
           </div>
         </div>
@@ -148,16 +153,11 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
+              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Homero <br> <span>Hace un momento</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario"> Lorem ipsum dolor, sit amet cons
-                  ectetur adipisicing elit. Dolores id tempore 
-                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
-                  acilis harum libero aut
-                  em dolore qui delectus quisquam quae debitis.
-              </p>
+              <p class="comentario">Me gustó el Post 😀</p>
             </div>
           </div>
         </div>
@@ -165,16 +165,11 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
+              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Homero <br> <span>19:30, hoy</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario"> Lorem ipsum dolor, sit amet cons
-                  ectetur adipisicing elit. Dolores id tempore 
-                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
-                  acilis harum libero aut
-                  em dolore qui delectus quisquam quae debitis.
-              </p>
+              <p class="comentario">Buena Noticia!</p>
             </div>
           </div>
         </div>
@@ -182,16 +177,11 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
+              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Homero <br> <span> 4:04, hoy</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario"> Lorem ipsum dolor, sit amet cons
-                  ectetur adipisicing elit. Dolores id tempore 
-                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
-                  acilis harum libero aut
-                  em dolore qui delectus quisquam quae debitis.
-              </p>
+              <p class="comentario">Te amo Messi</p>
             </div>
           </div>
         </div>
@@ -199,16 +189,11 @@
         <div class="col-12 my-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
+              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Homero <br> <span> 15:22, 24/06/2023</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario"> Lorem ipsum dolor, sit amet cons
-                  ectetur adipisicing elit. Dolores id tempore 
-                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
-                  acilis harum libero aut
-                  em dolore qui delectus quisquam quae debitis.
-              </p>
+              <p class="comentario">Vamos Messi</p>
             </div>
           </div>
         </div>
