--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Los Pumas 7's en cuartos</h5>
                 <p class="card-text fs-4">El seleccionado de rugby 7 de los Pumas clasificaron a cuartos de final en la copa oro de Londres y sueñan con un título nuevo.</p>
-                <a href="entradaBlog.html" class="btn btn-leer fw-bold text-light">Leer</a>
+                <a href="entradaBlog2.html" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- post/card3 -->
@@ -175,15 +175,15 @@
             <!-- paginacion -->
               <ul class="pagination pagination-sm justify-content-center">
                 <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Previous">
+                  <a class="page-link" href="404error.html" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                   </a>
                 </li>
                 <li class="page-item"><a class="page-link" href="#colPost1">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="404error.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="404error.html">3</a></li>
                 <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
+                  <a class="page-link" href="404error.html" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                   </a>
                 </li>
