--- a/entradaBlog2.html
+++ b/entradaBlog2.html
@@ -96,28 +96,26 @@
 
   <main>
     <div class="container text-center text-white">
-      <img src="./img/messiPost.jpeg" alt="banner messi" class="imgStyle">
-      <h1 class="text-center my-3">Messi sobre el mundial 2026</h1>
+      <img src="./img/bannerpumas.webp" alt="banner pumas" class="imgStyle">
+      <h1 class="text-center my-3">Los Pumas 7's en cuartos</h1>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-9 fs-5">
           <div class="text-white">
-            <p class="fw-bold ">El capitán de la Selección Argentina habló tras el triunfo ante Australia en un amistoso y se volvió a referir a la frase sobre su ausencia en la Copa del Mundo 2026. "Es difícil que se dé" aseguró.</p>
+            <p class="fw-bold ">Tras lograr el pase a los Juegos Olímpicos de París 2024, los Pumas 7’s se encuentran disputando el último torneo de la temporada, con la intención de cerrar de la mejor manera la participación histórica en el Circuito Mundial. Los dirigidos por Santiago Gómez Cora, que ya se quedaron con la segunda posición en la tabla general, clasificaron a los cuartos de final de la Copa de Oro en Londres. </p>
             <br>
-            <p>En la mañana del jueves, la Selección Argentina derrotó 2-0 a Australia en un amistoso disputado en Beijing con un gol de Lionel Messi y otro de Germán Pezzella. El capitán de la Albiceleste habló con TyC Sports luego del triunfo, dio sus sensaciones y volvió a hablar de sus declaraciones sobre el Mundial de 2026.</p>
+            <p>En una jornada distinta a las demás, ya que se jugaron tres partidos en un día, el conjunto nacional logró dos victorias y una derrota. En el debut vencieron a <strong>Japón por 43-12</strong> y más tarde le ganaron a <strong>Fiji por 40-12,</strong> logrando igualar la mayor diferencia en el marcador ante los isleños. Ya en el cierre del grupo B, <strong>los Pumas no pudieron ante Irlanda, cayendo por 14-12 en un partido muy cerrado.</strong> A pesar de la caída, clasificaron en la primera posición a los cuartos de final.</p>
           </div>
         </div>
         <div class="col-3">
-          <img src="./img/messiPost.webp" alt="messi post" class="imgStyle2">
+          <img src="./img/PumasBanner.webp" alt="pumas post" class="imgStyle2">
         </div>
         <div class="col-12 fs-5 mt-3">
           <div class="text-white">
-            <p> <strong>"Siempre disfrutamos de estar acá, como lo venimos repitiendo hace tiempo. Hoy una vez más acá, fue complicado jugar, mucha humedad, mucho calor, estaba pesado. Más allá de todo, seguimos con la misma idea y creciendo",</strong> declaró la Pulga sobre el encuentro.</p>
+            <p>A diferencia de los otros circuitos, en los que había cuatro grupos, en el cierre de la temporada se dividieron en tres zonas, por lo que se deberán enfrentar ante el mejor tercero. Ante esto, el conjunto nacional se volverá a medir ante el Trébol, a partir de las 5.45.</p>
             <br>
-            <p> <strong>"Lo que dije del Mundial es algo normal. Por edad y por el tiempo es difícil que se dé. Disfruto el momento, el día a día, el estar acá, ahora vienen partidos de Eliminatorias, después la Copa América. Es ir muy lejos pensar en el Mundial. Hay que disfrutar de lo conseguido y de cada momento que nos toque vivir"</strong>, aseguró sobre su presencia en 2026.</p>
-            <br>
-            <p> <strong>"Busco disfrutar del día a día, que el último año me costó bastante, no estaba como me hubiese gustado. Y pensar en lo que se viene. Empieza un ciclo nuevo, se vienen partidos de Eliminatorias dentro de poquito, no nos podemos quedar en lo que conseguimos, hay que pensar en lo que viene y disfrutar cuando nos toca reencontrarnos"</strong>, completó.</p>
+            <p class="fw-bold">Los tryman de la Albiceleste en el primer día fueron: Luciano González y Alejo Lavayén con 3; Rodrigo Isgró, Tomás Elizalde y Marcos Moneta con 2; y Germán Schulz, Santiago Álvarez y Mateo Graziano con uno.</p>
           </div>
           <div class="text-white mt-5">
             <p>&copy; Todos los derechos TyC Sports 2023</p>
@@ -145,7 +143,7 @@
               <p class="nombre align-self-center">Homero <br> <span>Ahora</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Juga el mundial 2026 Leo!!</p>
+              <p class="comentario">Vamos los Pumas por el oro!</p>
             </div>
           </div>
         </div>
@@ -181,7 +179,7 @@
               <p class="nombre align-self-center">Homero <br> <span> 4:04, hoy</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Te amo Messi</p>
+              <p class="comentario">Copen Londres Pumas queridos</p>
             </div>
           </div>
         </div>
@@ -193,7 +191,7 @@
               <p class="nombre align-self-center">Homero <br> <span> 15:22, 24/06/2023</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Vamos Messi</p>
+              <p class="comentario">Vamos por un titulo mas</p>
             </div>
           </div>
         </div>
