--- a/entradaBlog3.html
+++ b/entradaBlog3.html
@@ -96,26 +96,26 @@
 
   <main>
     <div class="container text-center text-white">
-      <img src="./img/bannerpumas.webp" alt="banner pumas" class="imgStyle">
-      <h1 class="text-center my-3">Los Pumas 7's en cuartos</h1>
+      <img src="./img/jokicSlider.jpeg" alt="banner denver" class="imgStyle">
+      <h1 class="text-center my-3">Denver Nuggets campeones de la NBA 2023</h1>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-9 fs-5">
           <div class="text-white">
-            <p class="fw-bold ">Tras lograr el pase a los Juegos Olímpicos de París 2024, los Pumas 7’s se encuentran disputando el último torneo de la temporada, con la intención de cerrar de la mejor manera la participación histórica en el Circuito Mundial. Los dirigidos por Santiago Gómez Cora, que ya se quedaron con la segunda posición en la tabla general, clasificaron a los cuartos de final de la Copa de Oro en Londres. </p>
+            <p class="fw-bold ">Los Nuggets vencieron 94-89 a los Heat en el quinto partido de las Finales 2022-23 y levantaron el trofeo Larry O'Brien por primera vez en la historia</p>
             <br>
-            <p>En una jornada distinta a las demás, ya que se jugaron tres partidos en un día, el conjunto nacional logró dos victorias y una derrota. En el debut vencieron a <strong>Japón por 43-12</strong> y más tarde le ganaron a <strong>Fiji por 40-12,</strong> logrando igualar la mayor diferencia en el marcador ante los isleños. Ya en el cierre del grupo B, <strong>los Pumas no pudieron ante Irlanda, cayendo por 14-12 en un partido muy cerrado.</strong> A pesar de la caída, clasificaron en la primera posición a los cuartos de final.</p>
+            <p>En el Ball Arena, los Nuggets vencieron 94-89 a los Heat, en lo que fue una fiesta para toda la NBA. Denver superó 4-1 en la serie que se disputó al mejor de siete juegos, consiguiendo así su primer trofeo luego de 46 años de existencia.</p>
           </div>
         </div>
         <div class="col-3">
-          <img src="./img/PumasBanner.webp" alt="pumas post" class="imgStyle2">
+          <img src="./img/denver-nuggets-campeon-de-la-nba_862x485.webp" alt="post denver campeon" class="imgStyle2">
         </div>
         <div class="col-12 fs-5 mt-3">
           <div class="text-white">
-            <p>A diferencia de los otros circuitos, en los que había cuatro grupos, en el cierre de la temporada se dividieron en tres zonas, por lo que se deberán enfrentar ante el mejor tercero. Ante esto, el conjunto nacional se volverá a medir ante el Trébol, a partir de las 5.45.</p>
+            <p><strong>Nikola Jokic, el MVP de las Finales</strong>, volvió a ser la gran figura del partido con 28 puntos, 16 rebotes y 4 asistencias, mientras que Jamal Murray pasó cerca del triple-doble con 14 tantos, 8 asistencias y 8 rebotes. Hay que destacar a Kentavious Caldwell-Pope, de 11 puntos con cinco de ellos en el clutch, además de un robo clave sobre Jimmy Butler.</p>
             <br>
-            <p class="fw-bold">Los tryman de la Albiceleste en el primer día fueron: Luciano González y Alejo Lavayén con 3; Rodrigo Isgró, Tomás Elizalde y Marcos Moneta con 2; y Germán Schulz, Santiago Álvarez y Mateo Graziano con uno.</p>
+            <p>El serbio, además, se convirtió en el primer jugador en la historia de la NBA en ganar un título tras registrar al menos 500 puntos, 250 rebotes y 150 asistencias en una edición de Playoffs. De la mano de Michael Malone, los de Denver dejaron de ser este lunes uno de los 11 equipos que nunca se había calzado un anillo de campeón.</p>
           </div>
           <div class="text-white mt-5">
             <p>&copy; Todos los derechos TyC Sports 2023</p>
@@ -143,7 +143,7 @@
               <p class="nombre align-self-center">Homero <br> <span>Ahora</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Vamos los Pumas por el oro!</p>
+              <p class="comentario">Que crack el Joker serbio</p>
             </div>
           </div>
         </div>
@@ -151,11 +151,11 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span>Hace un momento</span></p>
+              <img src="./img/Moe.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Moe <br> <span>Hace un momento</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Me gustó el Post 😀</p>
+              <p class="comentario">Aguante la NBA</p>
             </div>
           </div>
         </div>
@@ -163,11 +163,11 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span>19:30, hoy</span></p>
+              <img src="./img/flanders.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Flanders<br> <span>19:30, hoy</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Buena Noticia!</p>
+              <p class="comentario">Tremenda noticia!</p>
             </div>
           </div>
         </div>
@@ -175,11 +175,11 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 4:04, hoy</span></p>
+              <img src="./img/bart.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Bart<br> <span> 4:04, hoy</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Copen Londres Pumas queridos</p>
+              <p class="comentario">Vamo Denver!!</p>
             </div>
           </div>
         </div>
@@ -187,11 +187,11 @@
         <div class="col-12 my-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/Moe.jpg" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Moe <br> <span> 15:22, 24/06/2023</span></p>
+              <img src="./img/nelson.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Nelson<br> <span> 15:22, 24/06/2023</span></p>
             </div>
             <div class="media-body">
-              <p class="comentario">Vamos por un titulo mas</p>
+              <p class="comentario">Felicidades por el primer titulo</p>
             </div>
           </div>
         </div>
