--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Denver Nuggets campeones de la NBA 2023</h5>
                 <p class="card-text fs-4">Con un desempeño extraordinario Denver se impuso frente a Miami por 4-1 y se consagró campeón de la NBA por primera vez en su historia.</p>
-                <a href="entradaBlog.html" class="btn btn-leer fw-bold text-light">Leer</a>
+                <a href="entradaBlog3.html" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- paginacion -->
