--- a/entradaBlog2.html
+++ b/entradaBlog2.html
@@ -139,8 +139,8 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span>Ahora</span></p>
+              <img src="./img/bart.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Bart<br> <span>Ahora</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Vamos los Pumas por el oro!</p>
@@ -163,8 +163,8 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span>19:30, hoy</span></p>
+              <img src="./img/nelson.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Nelson<br> <span>19:30, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Buena Noticia!</p>
@@ -175,8 +175,8 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 4:04, hoy</span></p>
+              <img src="./img/flanders.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Flanders<br> <span> 4:04, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Copen Londres Pumas queridos</p>
