--- a/entradaBlog.html
+++ b/entradaBlog.html
@@ -141,8 +141,8 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span>Ahora</span></p>
+              <img src="./img/Moe.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Moe<br> <span>Ahora</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Juga el mundial 2026 Leo!!</p>
@@ -153,8 +153,8 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span>Hace un momento</span></p>
+              <img src="./img/flanders.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Flanders<br> <span>Hace un momento</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Me gustó el Post 😀</p>
@@ -166,7 +166,7 @@
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
               <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span>19:30, hoy</span></p>
+              <p class="nombre align-self-center">Homero<br> <span>19:30, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Buena Noticia!</p>
@@ -177,8 +177,8 @@
         <div class="col-12 mt-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 4:04, hoy</span></p>
+              <img src="./img/bart.jpg" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Bart<br> <span> 4:04, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Te amo Messi</p>
@@ -189,8 +189,8 @@
         <div class="col-12 my-3">
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
-              <img src="./img/homero.jfif" alt="perfil comentario" class="imgComent">
-              <p class="nombre align-self-center">Homero <br> <span> 15:22, 24/06/2023</span></p>
+              <img src="./img/nelson.jfif" alt="perfil comentario" class="imgComent">
+              <p class="nombre align-self-center">Nelson<br> <span> 15:22, 24/06/2023</span></p>
             </div>
             <div class="media-body">
               <p class="comentario">Vamos Messi</p>
