todo listo y en orden

--- a/galeria.html
+++ b/galeria.html
@@ -119,25 +119,37 @@
             <img src="img/pumas-7s_862x485.webp" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
+            <img src="img/PumasBanner.webp" alt="imagen galeria">
+          </div>
+          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
+            <img src="img/messiPost.jpeg" alt="imagen galeria">
+          </div>
+          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
+            <img src="img/bannerpumas.webp" alt="imagen galeria">
+          </div>
+          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
+            <img src="img/fiatTipo.jpg" alt="imagen galeria">
+          </div>
+          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
+            <img src="img/MercadoPago.jpg" alt="imagen galeria">
+          </div>
+          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
+            <img src="img/spotify.jpg" alt="imagen galeria">
+          </div>
+          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
+            <img src="img/star-plus.jpg" alt="imagen galeria">
+          </div>
+          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
             <img src="img/denver-nuggets-campeon-de-la-nba_862x485.webp" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/siluetaUsuario.png" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/Logo-Blog.png" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
-          </div>
-          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
-          </div>
-          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
-          </div>
-          <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/img404.png" alt="imagen galeria">
           </div>
         </div>
         <div class="text-center pt-4">
