--- a/login.html
+++ b/login.html
@@ -104,11 +104,11 @@
                 <form>
                   <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingrese su email">
+                    <input type="email" class="form-control" id="email" placeholder="Ingrese su email" required>
                   </div>
                   <div class="mb-3">
                     <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña">
+                    <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña" required>
                   </div>
                   <button type="submit" class="btn btn-primary">Ingresar</button>
                 </form>
