responsive del post arreglado

--- a/entradaBlog.html
+++ b/entradaBlog.html
@@ -101,14 +101,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-9 fs-5">
+        <div class="col-12 col-lg-9 fs-5">
           <div class="text-white">
             <p class="fw-bold ">El capitán de la Selección Argentina habló tras el triunfo ante Australia en un amistoso y se volvió a referir a la frase sobre su ausencia en la Copa del Mundo 2026. "Es difícil que se dé" aseguró.</p>
             <br>
             <p>En la mañana del jueves, la Selección Argentina derrotó 2-0 a Australia en un amistoso disputado en Beijing con un gol de Lionel Messi y otro de Germán Pezzella. El capitán de la Albiceleste habló con TyC Sports luego del triunfo, dio sus sensaciones y volvió a hablar de sus declaraciones sobre el Mundial de 2026.</p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-lg-3">
           <img src="./img/messiPost.webp" alt="messi post" class="imgStyle2">
         </div>
         <div class="col-12 fs-5 mt-3">
