--- a/entradaBlog2.html
+++ b/entradaBlog2.html
@@ -101,14 +101,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-9 fs-5">
+        <div class="col-12 col-lg-9 fs-5">
           <div class="text-white">
             <p class="fw-bold ">Tras lograr el pase a los Juegos Olímpicos de París 2024, los Pumas 7’s se encuentran disputando el último torneo de la temporada, con la intención de cerrar de la mejor manera la participación histórica en el Circuito Mundial. Los dirigidos por Santiago Gómez Cora, que ya se quedaron con la segunda posición en la tabla general, clasificaron a los cuartos de final de la Copa de Oro en Londres. </p>
             <br>
             <p>En una jornada distinta a las demás, ya que se jugaron tres partidos en un día, el conjunto nacional logró dos victorias y una derrota. En el debut vencieron a <strong>Japón por 43-12</strong> y más tarde le ganaron a <strong>Fiji por 40-12,</strong> logrando igualar la mayor diferencia en el marcador ante los isleños. Ya en el cierre del grupo B, <strong>los Pumas no pudieron ante Irlanda, cayendo por 14-12 en un partido muy cerrado.</strong> A pesar de la caída, clasificaron en la primera posición a los cuartos de final.</p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-lg-3">
           <img src="./img/PumasBanner.webp" alt="pumas post" class="imgStyle2">
         </div>
         <div class="col-12 fs-5 mt-3">
