--- a/entradaBlog3.html
+++ b/entradaBlog3.html
@@ -101,14 +101,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-9 fs-5">
+        <div class="col-12 col-lg-9 fs-5">
           <div class="text-white">
             <p class="fw-bold ">Los Nuggets vencieron 94-89 a los Heat en el quinto partido de las Finales 2022-23 y levantaron el trofeo Larry O'Brien por primera vez en la historia</p>
             <br>
             <p>En el Ball Arena, los Nuggets vencieron 94-89 a los Heat, en lo que fue una fiesta para toda la NBA. Denver superó 4-1 en la serie que se disputó al mejor de siete juegos, consiguiendo así su primer trofeo luego de 46 años de existencia.</p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-lg-3">
           <img src="./img/denver-nuggets-campeon-de-la-nba_862x485.webp" alt="post denver campeon" class="imgStyle2">
         </div>
         <div class="col-12 fs-5 mt-3">
