--- a/acerca-de.html
+++ b/acerca-de.html
@@ -22,6 +22,9 @@
   <title>SBN - About us</title>
 </head>
 <body>
+
+  <!-- header -->
+
   <header class="fixed-top border-navbar">
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
@@ -51,41 +54,10 @@
         </button>
       </div>
     </nav>
-    <div class="modal fade" id="modalSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content bg-dark text-white">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirte</h1>
-          </div>
-          <p class="mx-2 mt-4 text-center">Accedé sin límites a la información más confiable del Mundo.</p>
-          <div class="modal-body">
-            <div>
-              <form>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                  <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Numero de telefono</label>
-                  <input type="number" class="form-control" id="exampleInputCellphone" required>
-                </div>
-                <div class="mb-3 form-check">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label" for="exampleCheck1">Recordarme</label>
-                </div>
-                <button type="submit" class="btn btn-leer">Suscribirme</button>
-              </form>
-            </div>
-          </div>
-          <p class="text-center mt-3">Disfrutá los beneficios de suscribirte!</p>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-leer" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-        </div>
-      </div>
-    </div>
   </header>
+
+  <!-- main -->
+
   <main>
     <div class="container-fluid py-2">
       <h1 class=" text-center fw-bold text-light">ROLLING BOYS</h1>
@@ -136,6 +108,9 @@
       </div>
     </div>
     </main>
+
+    <!-- footer -->
+
     <footer>
       <div class="container-fluid footer text-center">
         <div class="row text-white">
@@ -216,6 +191,45 @@
       </div>
     </footer>
     
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <!-- script bootstrap -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+    <!-- modal -->
+
+    <div class="modal fade" id="modalSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content bg-dark text-white">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirte</h1>
+          </div>
+          <p class="mx-2 mt-4 text-center">Accedé sin límites a la información más confiable del Mundo.</p>
+          <div class="modal-body">
+            <div>
+              <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                  <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Numero de telefono</label>
+                  <input type="number" class="form-control" id="exampleInputCellphone" required>
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+                </div>
+                <button type="submit" class="btn btn-leer">Suscribirme</button>
+              </form>
+            </div>
+          </div>
+          <p class="text-center mt-3">Disfrutá los beneficios de suscribirte!</p>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-leer" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
