--- a/login.html
+++ b/login.html
@@ -53,40 +53,6 @@
         </button>
       </div>
     </nav>
-    <div class="modal fade" id="modalSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content bg-dark text-white">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirte</h1>
-          </div>
-          <p class="mx-2 mt-4 text-center">Accedé sin límites a la información más confiable del Mundo.</p>
-          <div class="modal-body">
-            <div>
-              <form>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                  <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Numero de telefono</label>
-                  <input type="number" class="form-control" id="exampleInputCellphone" required>
-                </div>
-                <div class="mb-3 form-check">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label" for="exampleCheck1">Recordarme</label>
-                </div>
-                <button type="submit" class="btn btn-leer">Suscribirme</button>
-              </form>
-            </div>
-          </div>
-          <p class="text-center mt-3">Disfrutá los beneficios de suscribirte!</p>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-leer" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-        </div>
-      </div>
-    </div>
   </header>
 
   <main>
@@ -214,7 +180,45 @@
       </div>
     </div>
   </footer>
+
+  <!-- script bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- modal -->
    
+  <div class="modal fade" id="modalSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content bg-dark text-white">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirte</h1>
+        </div>
+        <p class="mx-2 mt-4 text-center">Accedé sin límites a la información más confiable del Mundo.</p>
+        <div class="modal-body">
+          <div>
+            <form>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie.</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Numero de telefono</label>
+                <input type="number" class="form-control" id="exampleInputCellphone" required>
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+              </div>
+              <button type="submit" class="btn btn-leer">Suscribirme</button>
+            </form>
+          </div>
+        </div>
+        <p class="text-center mt-3">Disfrutá los beneficios de suscribirte!</p>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-leer" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
