--- a/index.html
+++ b/index.html
@@ -253,44 +253,44 @@
           <div class="py-3 d-flex align-items-center justify-content-center">
             <h3 class="text-center">Nuestras redes</h3>
           </div>
-          <div class="d-flex justify-content-around align-items-center flex-column py-1">
+          <div class="d-flex justify-content-around align-items-center flex-column">
 
             <!-- red1 -->
-            <div class="d-flex mb-1">
+            <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
             </div>
 
             <!-- red2 -->
-            <div class="d-flex mb-1">
+            <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
             </div>
 
             <!-- red3 -->
-            <div class="d-flex mb-1">
+            <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
             </div>
 
             <!-- red4 -->
-            <div class="d-flex mb-1">
+            <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
             </div>
 
             <!-- red5 -->
-            <div class="d-flex mb-1">
+            <div class="d-flex mb-1 align-items-center redesDiv">
               <div>
-                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                <img src="img/linkedin.webp" alt="instagram" class="iconRedes">
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
             </div>
